--- a/seminarioFuentes2022.Rmd
+++ b/seminarioFuentes2022.Rmd
@@ -37,8 +37,7 @@ library(tidyverse)
 
 ### Carga de datos
 
-Los datos que he utilizado estaban contenidos en 3 tablas, dos de ellas "Registro_regional_de_sida" y "Registro_nuevas_infecciones_por_vih" provienen de la sección de datos abiertos página de la [Junta de Castilla y León](https://datosabiertos.jcyl.es/web/es/datos-abiertos-castilla-leon.html). La tabla "poblacionCyL" pertenece a la página web de datos abiertos del gobierno de España, a la que podéis acceder desde [aquí](https://datos.gob.es/es/catalogo).
-Todos ellos han sido descargados en formato CSV.
+Los datos que he utilizado estaban contenidos en 3 tablas, dos de ellas "Registro_regional_de_sida" y "Registro_nuevas_infecciones_por_vih" provienen de la sección de datos abiertos página de la [Junta de Castilla y León](https://datosabiertos.jcyl.es/web/es/datos-abiertos-castilla-leon.html).
 
 ```{r, warning = FALSE, message = FALSE}
 registro_regional_de_sida <- read_delim("INPUT/DATA/registro-regional-de-sida.csv", col_types = cols(
@@ -50,10 +49,12 @@ registro_nuevas_infecciones_por_vih <- read_delim("INPUT/DATA/registro-nuevas-in
                                         Año = readr::col_integer(),
                                         "VIH" = readr::col_integer()),
                                                   delim = ";", escape_double = FALSE, trim_ws = TRUE)
+```
+```{r}
+lirary(remotes)
 
-poblacionCyL <- read_delim("INPUT/DATA/04001.csv", delim = ";", escape_double = FALSE, trim_ws = TRUE)
+library(climaemet)
 
-summary(poblacionCyL)
 ```
 
 ### Exploración de los datos
@@ -70,14 +71,6 @@ registroRegionalSida <- rename(.data = registro_regional_de_sida, Año = "Año d
   dplyr::filter(Año < 2009)%>%
   select(., Año:Grupo_Riesgo)%>%
   mutate(Provincia = factor(Provincia, levels = c("Burgos", "León", "Ávila", "Zamora", "Salamanca", "Segovia", "Valladolid", "Palencia", "Soria"), labels = c("BURGOS", "LEON", "AVILA", "ZAMORA", "SALAMANCA", "SEGOVIA", "VALLADOLID", "PALENCIA", "SORIA")))
-
-```
-
-```{r}
-poblacionCyL <- rename(.data = poblacionCyL, Provincia = "Provincias", Edad = "Edad (3 grupos de edad)")%>%
- # mutate(Provincia = factor(Provincia, levels = c("09 Burgos", "24 León", "05 Ávila", "49 Zamora", "37 Salamanca", "40 Segovia", "47 Valladolid", "34 #Palencia", "42 Soria"), labels = c("BURGOS", "LEON", "AVILA", "ZAMORA", "SALAMANCA", "SEGOVIA", "VALLADOLID", "PALENCIA", "SORIA")))%>%
-  dplyr::filter(., Sexo != "Ambos sexos", Edad != "TOTAL EDADES", Provincia %in% c("09 Burgos", "24 León", "05 Ávila", "49 Zamora", "37 Salamanca", "40 Segovia", "47 Valladolid", "34 Palencia", "42 Soria"))%>%
-  select(., Provincia, Sexo, Edad, Año, Total)
 
 ```
 
