--- a/seminarioFuentes2022.Rmd
+++ b/seminarioFuentes2022.Rmd
@@ -33,11 +33,17 @@ library(readr)
 library(dplyr)
 library(ggplot2)
 library(tidyverse)
+library(remotes)
+library(climaemet)
 ```
 
 ### Carga de datos
 
 Los datos que he utilizado estaban contenidos en 3 tablas, dos de ellas "Registro_regional_de_sida" y "Registro_nuevas_infecciones_por_vih" provienen de la sección de datos abiertos página de la [Junta de Castilla y León](https://datosabiertos.jcyl.es/web/es/datos-abiertos-castilla-leon.html).
+
+#### registro_regional_de_sida
+
+Esta tabla contiene el Sexo, Provincia, País, Edad, Código, Grupo de riesgo y Año de diagnóstico del VIH a personas entre 1985 y 2009.
 
 ```{r, warning = FALSE, message = FALSE}
 registro_regional_de_sida <- read_delim("INPUT/DATA/registro-regional-de-sida.csv", col_types = cols(
@@ -45,27 +51,38 @@ registro_regional_de_sida <- read_delim("INPUT/DATA/registro-regional-de-sida.cs
                                         "Edad años" = readr::col_integer()),
                                         delim = ";", escape_double = FALSE, trim_ws = TRUE)
 
+summary(registro_regional_de_sida)
+```
+
+#### registro_nuevas_infecciones_por_vih
+
+En este conjunto de datos obtenemos unos datos bastante similares a los anteriores, Sexo, Provincia, País, Edad, Código y Grupo de riesgo y Año de diagnóstico entre otros, del VIH a personas entre 2009 y 2021.
+
+```{r, warning = FALSE, message = FALSE}
 registro_nuevas_infecciones_por_vih <- read_delim("INPUT/DATA/registro-nuevas-infecciones-por-vih.csv",col_types = cols(
                                         Año = readr::col_integer(),
                                         "VIH" = readr::col_integer()),
-                                                  delim = ";", escape_double = FALSE, trim_ws = TRUE)
+                                        delim = ";", escape_double = FALSE, trim_ws = TRUE)
+
+summary(registro_nuevas_infecciones_por_vih)
 ```
-```{r}
-library(remotes)
+La última tabla la he obtenido a través de un repositorio de GitHub, creado para que la gente pueda usar libremente los datos abiertos de [AEMET](https://opendata.aemet.es/centrodedescargas/inicio) con una guía para instalar los paquetes de datos en Rstudio, que podéis visitar a través de [aquí](https://github.com/rOpenSpain/climaemet). 
+```{r, warning = FALSE, message = FALSE}
 # install_github("ropenspain/climaemet")
-library(climaemet)
+
 # aemet_api_key("eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJyYW0xMDEwQGFsdS51YnUuZXMiLCJqdGkiOiI3ZDQyYjFlNS02ZjMwLTRhNGUtODM0Ny1hZTI5ODU3YzUwYzgiLCJpc3MiOiJBRU1FVCIsImlhdCI6MTY3MDYwODI1MywidXNlcklkIjoiN2Q0MmIxZTUtNmYzMC00YTRlLTgzNDctYWUyOTg1N2M1MGM4Iiwicm9sZSI6IiJ9.N3jVd2A9en72Xh22QTWpTJ9omGlVcl-xcmfuyh5UQ1w", install = TRUE)
 ```
 
-```{r}
+```{r, warning = FALSE, message = FALSE}
 stations <- aemet_stations()
 
 knitr::kable(head(stations))
+```
 
-data_observation <- aemet_last_obs("all")
-data_observation
-
-summary(data_observation)
+```{r}
+data_daily <-
+  aemet_daily_clim(station, start = "1982", end = "2021")
+knitr::kable(head(data_daily))
 ```
 
 ### Exploración de los datos
